deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alpine
  labels:
    app: myweb
spec:
  replicas: 3
  selector:
    matchLabels:
      app: myweb
  template:
    metadata:
      labels:
        app: myweb
    spec:
      containers:
      - name: alpine
        image: primepossum/alpine:latest
        ports:
        - containerPort: 3000
