pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  securityContext:
    runAsUser: 1000
    runAsGroup: 3000
    fsGroup: 2000      
  containers:
  - name: nginx
    image: nginx:1.14.2
    ports:
    - containerPort: 80
