service.yml
apiVersion: v1
kind: Service
metadata:
  name: alpine-service
spec:
  type: NodePort
  selector:
    app: myweb
  ports:
    - protocol: TCP
      port: 81
      targetPort: 3000
      nodePort: 31234
