ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alpine-ingress
  annotations:
   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: foo.bar.com
    http:
      paths:
      - path: /foo
        pathType: Prefix
        backend:
          service:
            name: alpine-service
            port:
              number: 3000
      - path: /bar
        pathType: Prefix
        backend:
          service:
            name: alpine-service
            port:
              number: 80
      - path: /car
        pathType: Prefix
        backend:
          service:
            name: alpine-service
            port:
              number: 800
